--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-aws3",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "Pure JavaScript react native library for uploading to AWS S3",
   "author": {
     "name": "Ben Reinhart"
@@ -29,10 +29,7 @@
   },
   "scripts": {
     "build": "babel src --out-dir lib",
-    "clean": "rm -rf lib",
-    "prepublish": "yarn run clean && yarn run test && yarn run build",
-    "test": "jest",
-    "test-watch": "jest --watch"
+    "prepublish": "npm run build"
   },
   "dependencies": {
     "buffer": "^4.5.1",
