--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     ]
   },
   "scripts": {
-    "build": "babel src --out-dir lib",
-    "prepublish": "npm run build"
+    "build": "babel src --out-dir lib"
   },
   "dependencies": {
     "buffer": "^4.5.1",
@@ -44,7 +43,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/benjreinhart/react-native-aws3"
+    "url": "https://github.com/DonGabo/react-native-aws3/tarball/master"
   },
   "bugs": {
     "url": "https://github.com/benjreinhart/react-native-aws3/issues"
